lab1/Test/L1-A-12-55.output
Error Type B at Line 13
Error Type A at Line 15
Error Type A at Line 21
Error Type B at Line 21
Error Type A at Line 26
Error Type B at Line 30
Error Type A at Line 33
Error Type A at Line 33
