lab1/Test/L1-A-12-55.cmm
float Mp7q , A [ 951407966 ] 

;
int IAKQzbRgOmg8i ( struct FGaqdEoCDT {
}zy4T87_2nscAAADGw ) {
  int ZY = IpkAdg5EN = O8J || n && RyIRwRg5 > cW - 
    pGigkp * ! - - ! ySiAA78p6pZ1 ( i == GAxwpzaIC9 + 
    XT_uVIR5_und2i0d3iNB / ! m [ NP ( LSFW9_8QCNmoeQZ 
    , kRza0U8 , pw_nH5nmzN != O8f9hiIkq ( _yermpxF8GVMwbWB5R 
    , pvlS3NDkpE < NJx4DQuoW / bp0 ( EiRSIBoaXj3u0 || 
    iCx06HiOjlRT9Ci9 >= - hLqvxAdzGYg4TavfdAY ( y == dJg2g 
    - k2B * - 830028834.542283439 ) + ! ( - 1025829156 
    lpTZaPm_v ) ) ) ) = ! GHJDAnP2stzPSmc0w ( ) ] ) <= 
    Q1 . u90K6 , zSXt ;
}^
struct y3 ;
int Z ( ) {
  struct {
    struct kVo SNNkRCsO82f2Is4Eut ;
  }JjzmhBdk00 ;
&  if ( IPak   while ( ZCxsNXdw )   gtlta6j ;

else   {
    struct qs3R OHhblxtUkSrGT7OZg ;
    int Vw_KM_uItk ;
  }@

}
int ;
int kcc ( int , int SiBe ) {
  Kyk ;
  if ( MYLpD0rMCzhWM )   vxnlW1shpt9cyW0JeL ;
else   if '( nJRqS3d )   return PTz7aJT :;


}
int ;
